style.css
html {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  overflow-x: hidden;
  overflow-y: scroll;
  scroll-behavior: smooth;
}

#youtubePlayer {
  position: absolute;
  bottom: 1.5rem;
  right: 1.5rem;
}

img {
  max-width: 100%;
  height: 3em;
  vertical-align: middle;
}

header {
  top: 0;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #e5e5e5;
  border-bottom: 1px solid #848484;
}

body {
  height: 100%;
  margin: 0;
  background-color: #ffffff;
  font-size: 16px;
  font-family: "Open Sans", sans-serif;
  color: #333;
  line-height: 1.5;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
}

footer{
    bottom: 0;
    margin: 0;
    padding: 0;
    height: 40px;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #e5e5e5;
    position: relative;
}

h1 {
  font-size: 2em;
  font-weight: 300;
  margin: 20px;
}

p {
  text-align: center;
}

#wrapper {
  width: 60%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  gap: 40px;
  background-color: #e5e5e5;
  padding: 1.5rem 1rem;
}

.confetti {
  z-index: -1;
  height: 100%;
  width: 100%;
  display: block;
  margin: 0 auto;
  border: 1px solid #ddd;
  user-select: none;
  position: absolute;
}

.countdownWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: #333 1px solid;
  border-radius: 5px;
  background-color: #fff;
  width: 400px;
  height: 200px;
}

.listWrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 5px;
  background-color: #fff;
  margin: 0 auto;
  width: 400px;
  height: 300px;
}

.arrayWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: #333 1px solid;
  border-radius: 5px;
  background-color: #fff;
  width: 400px;
  height: auto;
  min-height: 200px;
}

.searchWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: #333 1px solid;
  border-radius: 5px;
  background-color: #fff;
  width: 400px;
  height: auto;
  min-height: 200px;
}

.left {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: #333 1px solid;
  border-radius: 5px;
  background-color: rgb(255, 255, 255);
  margin: 0 auto;
  width: 400px;
  height: 300px;
}

.right {
  flex: 2;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: #333 1px solid;
  border-radius: 5px;
  background-color: #fff;
  margin: 0 auto;
  width: 400px;
  height: 300px;
}

